[package]
name = "testit-daemon"
version = "0.0.1"
edition = "2021"
description = "An application for testing apis."
license = "Apache 2.0"
repository = "https://github.com/kjetilfjellheim/testit"
readme = "README.md"
keywords = ["monitoring", "agent", "health", "system"]
authors = ["Kjetil Fjellheim <kjetil@forgottendonkey.net>"]
categories = ["testing", "api"]

[dependencies]
testit-lib = { path = "../testit-lib" }
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
actix-web = "4.9.0"

[dev-dependencies]
reqwest = "0.12.9"

[profile.release]
lto = true
