[package]
name = "testit-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
uuid = { version = "1.11.0", features = ["v4"] }
hyper = { version = "1.5.1", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
regex = "1.11.1"

[dev-dependencies]
reqwest = { version = "0.12.9" }