[package]
name = "testit-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
actix-web = "4.9.0"

[dev-dependencies]
reqwest = "0.12.9"